2_Parser/y.output
Terminals unused in grammar

    THEN
    ERROR


Rules useless in parser due to conflicts

   11 type_spec: INT
   12          | VOID


State 1 conflicts: 1 shift/reduce
State 2 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl

    6 var_decl: type_spec id SEMI
    7         | INT id LBRACE num RBRACE SEMI
    8         | VOID id LBRACE num RBRACE SEMI

    9 num: NUM

   10 id: ID

   11 type_spec: INT
   12          | VOID

   13 fun_decl: type_spec id LPAREN params RPAREN comp_stmt

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_spec id
   19      | INT id LBRACE RBRACE
   20      | VOID id LBRACE RBRACE

   21 comp_stmt: LCURLY local_decls stmt_list RCURLY

   22 local_decls: local_decls var_decl
   23            | ε

   24 stmt_list: stmt_list stmt
   25          | stmt

   26 stmt: exp_stmt
   27     | comp_stmt
   28     | selec_stmt
   29     | iter_stmt
   30     | ret_stmt

   31 exp_stmt: exp SEMI
   32         | SEMI

   33 selec_stmt: IF LPAREN exp RPAREN stmt ELSE stmt
   34           | IF LPAREN exp RPAREN stmt

   35 iter_stmt: WHILE LPAREN exp RPAREN stmt

   36 ret_stmt: RETURN SEMI
   37         | RETURN exp SEMI

   38 exp: var ASSIGN exp
   39    | simple_exp

   40 var: id
   41    | id LBRACE exp RBRACE

   42 simple_exp: add_exp LT add_exp
   43           | add_exp LE add_exp
   44           | add_exp GT add_exp
   45           | add_exp GE add_exp
   46           | add_exp EQ add_exp
   47           | add_exp NE add_exp
   48           | add_exp

   49 add_exp: add_exp PLUS term
   50        | add_exp MINUS term
   51        | term

   52 term: term TIMES factor
   53     | term OVER factor
   54     | factor

   55 factor: LPAREN exp RPAREN
   56       | var
   57       | call
   58       | num

   59 call: id LPAREN args RPAREN

   60 args: arg_list
   61     | ε

   62 arg_list: arg_list COMMA exp
   63         | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 33 34
    THEN (259)
    ELSE (260) 33
    WHILE (261) 35
    RETURN (262) 36 37
    INT (263) 7 11 19
    VOID (264) 8 12 15 20
    ID (265) 10
    NUM (266) 9
    ASSIGN (267) 38
    EQ (268) 46
    NE (269) 47
    LT (270) 42
    LE (271) 43
    GT (272) 44
    GE (273) 45
    PLUS (274) 49
    MINUS (275) 50
    TIMES (276) 52
    OVER (277) 53
    LPAREN (278) 13 33 34 35 55 59
    RPAREN (279) 13 33 34 35 55 59
    LBRACE (280) 7 8 19 20 41
    RBRACE (281) 7 8 19 20 41
    LCURLY (282) 21
    RCURLY (283) 21
    SEMI (284) 6 7 8 31 32 36 37
    COMMA (285) 16 62
    ERROR (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    decl_list (34)
        on left: 2 3
        on right: 1 2
    decl (35)
        on left: 4 5
        on right: 2 3
    var_decl (36)
        on left: 6 7 8
        on right: 4 22
    num (37)
        on left: 9
        on right: 7 8 58
    id (38)
        on left: 10
        on right: 6 7 8 13 18 19 20 40 41 59
    type_spec (39)
        on left: 11 12
        on right: 6 13 18
    fun_decl (40)
        on left: 13
        on right: 5
    params (41)
        on left: 14 15
        on right: 13
    param_list (42)
        on left: 16 17
        on right: 14 16
    param (43)
        on left: 18 19 20
        on right: 16 17
    comp_stmt (44)
        on left: 21
        on right: 13 27
    local_decls (45)
        on left: 22 23
        on right: 21 22
    stmt_list (46)
        on left: 24 25
        on right: 21 24
    stmt (47)
        on left: 26 27 28 29 30
        on right: 24 25 33 34 35
    exp_stmt (48)
        on left: 31 32
        on right: 26
    selec_stmt (49)
        on left: 33 34
        on right: 28
    iter_stmt (50)
        on left: 35
        on right: 29
    ret_stmt (51)
        on left: 36 37
        on right: 30
    exp (52)
        on left: 38 39
        on right: 31 33 34 35 37 38 41 55 62 63
    var (53)
        on left: 40 41
        on right: 38 56
    simple_exp (54)
        on left: 42 43 44 45 46 47 48
        on right: 39
    add_exp (55)
        on left: 49 50 51
        on right: 42 43 44 45 46 47 48 49 50
    term (56)
        on left: 52 53 54
        on right: 49 50 51 52 53
    factor (57)
        on left: 55 56 57 58
        on right: 52 53 54
    call (58)
        on left: 59
        on right: 57
    args (59)
        on left: 60 61
        on right: 59
    arg_list (60)
        on left: 62 63
        on right: 60 62


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    var_decl   go to state 6
    type_spec  go to state 7
    fun_decl   go to state 8


State 1

    7 var_decl: INT • id LBRACE num RBRACE SEMI
   11 type_spec: INT •

    ID  shift, and go to state 9

    ID  [reduce using rule 11 (type_spec)]

    id  go to state 10


State 2

    8 var_decl: VOID • id LBRACE num RBRACE SEMI
   12 type_spec: VOID •

    ID  shift, and go to state 9

    ID  [reduce using rule 12 (type_spec)]

    id  go to state 11


State 3

    0 $accept: program • $end

    $end  shift, and go to state 12


State 4

    1 program: decl_list •
    2 decl_list: decl_list • decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl       go to state 13
    var_decl   go to state 6
    type_spec  go to state 7
    fun_decl   go to state 8


State 5

    3 decl_list: decl •

    $default  reduce using rule 3 (decl_list)


State 6

    4 decl: var_decl •

    $default  reduce using rule 4 (decl)


State 7

    6 var_decl: type_spec • id SEMI
   13 fun_decl: type_spec • id LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 9

    id  go to state 14


State 8

    5 decl: fun_decl •

    $default  reduce using rule 5 (decl)


State 9

   10 id: ID •

    $default  reduce using rule 10 (id)


State 10

    7 var_decl: INT id • LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 15


State 11

    8 var_decl: VOID id • LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 16


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 decl_list: decl_list decl •

    $default  reduce using rule 2 (decl_list)


State 14

    6 var_decl: type_spec id • SEMI
   13 fun_decl: type_spec id • LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 17
    SEMI    shift, and go to state 18


State 15

    7 var_decl: INT id LBRACE • num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 20


State 16

    8 var_decl: VOID id LBRACE • num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 21


State 17

   13 fun_decl: type_spec id LPAREN • params RPAREN comp_stmt

    INT   shift, and go to state 22
    VOID  shift, and go to state 23

    type_spec   go to state 24
    params      go to state 25
    param_list  go to state 26
    param       go to state 27


State 18

    6 var_decl: type_spec id SEMI •

    $default  reduce using rule 6 (var_decl)


State 19

    9 num: NUM •

    $default  reduce using rule 9 (num)


State 20

    7 var_decl: INT id LBRACE num • RBRACE SEMI

    RBRACE  shift, and go to state 28


State 21

    8 var_decl: VOID id LBRACE num • RBRACE SEMI

    RBRACE  shift, and go to state 29


State 22

   11 type_spec: INT •
   19 param: INT • id LBRACE RBRACE

    ID  shift, and go to state 9

    ID  [reduce using rule 11 (type_spec)]

    id  go to state 30


State 23

   12 type_spec: VOID •
   15 params: VOID •
   20 param: VOID • id LBRACE RBRACE

    ID  shift, and go to state 9

    ID        [reduce using rule 12 (type_spec)]
    $default  reduce using rule 15 (params)

    id  go to state 31


State 24

   18 param: type_spec • id

    ID  shift, and go to state 9

    id  go to state 32


State 25

   13 fun_decl: type_spec id LPAREN params • RPAREN comp_stmt

    RPAREN  shift, and go to state 33


State 26

   14 params: param_list •
   16 param_list: param_list • COMMA param

    COMMA  shift, and go to state 34

    $default  reduce using rule 14 (params)


State 27

   17 param_list: param •

    $default  reduce using rule 17 (param_list)


State 28

    7 var_decl: INT id LBRACE num RBRACE • SEMI

    SEMI  shift, and go to state 35


State 29

    8 var_decl: VOID id LBRACE num RBRACE • SEMI

    SEMI  shift, and go to state 36


State 30

   19 param: INT id • LBRACE RBRACE

    LBRACE  shift, and go to state 37


State 31

   20 param: VOID id • LBRACE RBRACE

    LBRACE  shift, and go to state 38


State 32

   18 param: type_spec id •

    $default  reduce using rule 18 (param)


State 33

   13 fun_decl: type_spec id LPAREN params RPAREN • comp_stmt

    LCURLY  shift, and go to state 39

    comp_stmt  go to state 40


State 34

   16 param_list: param_list COMMA • param

    INT   shift, and go to state 22
    VOID  shift, and go to state 41

    type_spec  go to state 24
    param      go to state 42


State 35

    7 var_decl: INT id LBRACE num RBRACE SEMI •

    $default  reduce using rule 7 (var_decl)


State 36

    8 var_decl: VOID id LBRACE num RBRACE SEMI •

    $default  reduce using rule 8 (var_decl)


State 37

   19 param: INT id LBRACE • RBRACE

    RBRACE  shift, and go to state 43


State 38

   20 param: VOID id LBRACE • RBRACE

    RBRACE  shift, and go to state 44


State 39

   21 comp_stmt: LCURLY • local_decls stmt_list RCURLY

    $default  reduce using rule 23 (local_decls)

    local_decls  go to state 45


State 40

   13 fun_decl: type_spec id LPAREN params RPAREN comp_stmt •

    $default  reduce using rule 13 (fun_decl)


State 41

   12 type_spec: VOID •
   20 param: VOID • id LBRACE RBRACE

    ID  shift, and go to state 9

    ID  [reduce using rule 12 (type_spec)]

    id  go to state 31


State 42

   16 param_list: param_list COMMA param •

    $default  reduce using rule 16 (param_list)


State 43

   19 param: INT id LBRACE RBRACE •

    $default  reduce using rule 19 (param)


State 44

   20 param: VOID id LBRACE RBRACE •

    $default  reduce using rule 20 (param)


State 45

   21 comp_stmt: LCURLY local_decls • stmt_list RCURLY
   22 local_decls: local_decls • var_decl

    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48
    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    LCURLY  shift, and go to state 39
    SEMI    shift, and go to state 50

    var_decl    go to state 51
    num         go to state 52
    id          go to state 53
    type_spec   go to state 54
    comp_stmt   go to state 55
    stmt_list   go to state 56
    stmt        go to state 57
    exp_stmt    go to state 58
    selec_stmt  go to state 59
    iter_stmt   go to state 60
    ret_stmt    go to state 61
    exp         go to state 62
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 46

   33 selec_stmt: IF • LPAREN exp RPAREN stmt ELSE stmt
   34           | IF • LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 69


State 47

   35 iter_stmt: WHILE • LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 70


State 48

   36 ret_stmt: RETURN • SEMI
   37         | RETURN • exp SEMI

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    SEMI    shift, and go to state 71

    num         go to state 52
    id          go to state 53
    exp         go to state 72
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 49

   55 factor: LPAREN • exp RPAREN

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 73
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 50

   32 exp_stmt: SEMI •

    $default  reduce using rule 32 (exp_stmt)


State 51

   22 local_decls: local_decls var_decl •

    $default  reduce using rule 22 (local_decls)


State 52

   58 factor: num •

    $default  reduce using rule 58 (factor)


State 53

   40 var: id •
   41    | id • LBRACE exp RBRACE
   59 call: id • LPAREN args RPAREN

    LPAREN  shift, and go to state 74
    LBRACE  shift, and go to state 75

    $default  reduce using rule 40 (var)


State 54

    6 var_decl: type_spec • id SEMI

    ID  shift, and go to state 9

    id  go to state 76


State 55

   27 stmt: comp_stmt •

    $default  reduce using rule 27 (stmt)


State 56

   21 comp_stmt: LCURLY local_decls stmt_list • RCURLY
   24 stmt_list: stmt_list • stmt

    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48
    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    LCURLY  shift, and go to state 39
    RCURLY  shift, and go to state 77
    SEMI    shift, and go to state 50

    num         go to state 52
    id          go to state 53
    comp_stmt   go to state 55
    stmt        go to state 78
    exp_stmt    go to state 58
    selec_stmt  go to state 59
    iter_stmt   go to state 60
    ret_stmt    go to state 61
    exp         go to state 62
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 57

   25 stmt_list: stmt •

    $default  reduce using rule 25 (stmt_list)


State 58

   26 stmt: exp_stmt •

    $default  reduce using rule 26 (stmt)


State 59

   28 stmt: selec_stmt •

    $default  reduce using rule 28 (stmt)


State 60

   29 stmt: iter_stmt •

    $default  reduce using rule 29 (stmt)


State 61

   30 stmt: ret_stmt •

    $default  reduce using rule 30 (stmt)


State 62

   31 exp_stmt: exp • SEMI

    SEMI  shift, and go to state 79


State 63

   38 exp: var • ASSIGN exp
   56 factor: var •

    ASSIGN  shift, and go to state 80

    $default  reduce using rule 56 (factor)


State 64

   39 exp: simple_exp •

    $default  reduce using rule 39 (exp)


State 65

   42 simple_exp: add_exp • LT add_exp
   43           | add_exp • LE add_exp
   44           | add_exp • GT add_exp
   45           | add_exp • GE add_exp
   46           | add_exp • EQ add_exp
   47           | add_exp • NE add_exp
   48           | add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    EQ     shift, and go to state 81
    NE     shift, and go to state 82
    LT     shift, and go to state 83
    LE     shift, and go to state 84
    GT     shift, and go to state 85
    GE     shift, and go to state 86
    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 48 (simple_exp)


State 66

   51 add_exp: term •
   52 term: term • TIMES factor
   53     | term • OVER factor

    TIMES  shift, and go to state 89
    OVER   shift, and go to state 90

    $default  reduce using rule 51 (add_exp)


State 67

   54 term: factor •

    $default  reduce using rule 54 (term)


State 68

   57 factor: call •

    $default  reduce using rule 57 (factor)


State 69

   33 selec_stmt: IF LPAREN • exp RPAREN stmt ELSE stmt
   34           | IF LPAREN • exp RPAREN stmt

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 91
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 70

   35 iter_stmt: WHILE LPAREN • exp RPAREN stmt

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 92
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 71

   36 ret_stmt: RETURN SEMI •

    $default  reduce using rule 36 (ret_stmt)


State 72

   37 ret_stmt: RETURN exp • SEMI

    SEMI  shift, and go to state 93


State 73

   55 factor: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 94


State 74

   59 call: id LPAREN • args RPAREN

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    $default  reduce using rule 61 (args)

    num         go to state 52
    id          go to state 53
    exp         go to state 95
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68
    args        go to state 96
    arg_list    go to state 97


State 75

   41 var: id LBRACE • exp RBRACE

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 98
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 76

    6 var_decl: type_spec id • SEMI

    SEMI  shift, and go to state 18


State 77

   21 comp_stmt: LCURLY local_decls stmt_list RCURLY •

    $default  reduce using rule 21 (comp_stmt)


State 78

   24 stmt_list: stmt_list stmt •

    $default  reduce using rule 24 (stmt_list)


State 79

   31 exp_stmt: exp SEMI •

    $default  reduce using rule 31 (exp_stmt)


State 80

   38 exp: var ASSIGN • exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 99
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 81

   46 simple_exp: add_exp EQ • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 101
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 82

   47 simple_exp: add_exp NE • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 102
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 83

   42 simple_exp: add_exp LT • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 103
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 84

   43 simple_exp: add_exp LE • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 104
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 85

   44 simple_exp: add_exp GT • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 105
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 86

   45 simple_exp: add_exp GE • add_exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num      go to state 52
    id       go to state 53
    var      go to state 100
    add_exp  go to state 106
    term     go to state 66
    factor   go to state 67
    call     go to state 68


State 87

   49 add_exp: add_exp PLUS • term

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num     go to state 52
    id      go to state 53
    var     go to state 100
    term    go to state 107
    factor  go to state 67
    call    go to state 68


State 88

   50 add_exp: add_exp MINUS • term

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num     go to state 52
    id      go to state 53
    var     go to state 100
    term    go to state 108
    factor  go to state 67
    call    go to state 68


State 89

   52 term: term TIMES • factor

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num     go to state 52
    id      go to state 53
    var     go to state 100
    factor  go to state 109
    call    go to state 68


State 90

   53 term: term OVER • factor

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num     go to state 52
    id      go to state 53
    var     go to state 100
    factor  go to state 110
    call    go to state 68


State 91

   33 selec_stmt: IF LPAREN exp • RPAREN stmt ELSE stmt
   34           | IF LPAREN exp • RPAREN stmt

    RPAREN  shift, and go to state 111


State 92

   35 iter_stmt: WHILE LPAREN exp • RPAREN stmt

    RPAREN  shift, and go to state 112


State 93

   37 ret_stmt: RETURN exp SEMI •

    $default  reduce using rule 37 (ret_stmt)


State 94

   55 factor: LPAREN exp RPAREN •

    $default  reduce using rule 55 (factor)


State 95

   63 arg_list: exp •

    $default  reduce using rule 63 (arg_list)


State 96

   59 call: id LPAREN args • RPAREN

    RPAREN  shift, and go to state 113


State 97

   60 args: arg_list •
   62 arg_list: arg_list • COMMA exp

    COMMA  shift, and go to state 114

    $default  reduce using rule 60 (args)


State 98

   41 var: id LBRACE exp • RBRACE

    RBRACE  shift, and go to state 115


State 99

   38 exp: var ASSIGN exp •

    $default  reduce using rule 38 (exp)


State 100

   56 factor: var •

    $default  reduce using rule 56 (factor)


State 101

   46 simple_exp: add_exp EQ add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 46 (simple_exp)


State 102

   47 simple_exp: add_exp NE add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 47 (simple_exp)


State 103

   42 simple_exp: add_exp LT add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 42 (simple_exp)


State 104

   43 simple_exp: add_exp LE add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 43 (simple_exp)


State 105

   44 simple_exp: add_exp GT add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 44 (simple_exp)


State 106

   45 simple_exp: add_exp GE add_exp •
   49 add_exp: add_exp • PLUS term
   50        | add_exp • MINUS term

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88

    $default  reduce using rule 45 (simple_exp)


State 107

   49 add_exp: add_exp PLUS term •
   52 term: term • TIMES factor
   53     | term • OVER factor

    TIMES  shift, and go to state 89
    OVER   shift, and go to state 90

    $default  reduce using rule 49 (add_exp)


State 108

   50 add_exp: add_exp MINUS term •
   52 term: term • TIMES factor
   53     | term • OVER factor

    TIMES  shift, and go to state 89
    OVER   shift, and go to state 90

    $default  reduce using rule 50 (add_exp)


State 109

   52 term: term TIMES factor •

    $default  reduce using rule 52 (term)


State 110

   53 term: term OVER factor •

    $default  reduce using rule 53 (term)


State 111

   33 selec_stmt: IF LPAREN exp RPAREN • stmt ELSE stmt
   34           | IF LPAREN exp RPAREN • stmt

    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48
    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    LCURLY  shift, and go to state 39
    SEMI    shift, and go to state 50

    num         go to state 52
    id          go to state 53
    comp_stmt   go to state 55
    stmt        go to state 116
    exp_stmt    go to state 58
    selec_stmt  go to state 59
    iter_stmt   go to state 60
    ret_stmt    go to state 61
    exp         go to state 62
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 112

   35 iter_stmt: WHILE LPAREN exp RPAREN • stmt

    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48
    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    LCURLY  shift, and go to state 39
    SEMI    shift, and go to state 50

    num         go to state 52
    id          go to state 53
    comp_stmt   go to state 55
    stmt        go to state 117
    exp_stmt    go to state 58
    selec_stmt  go to state 59
    iter_stmt   go to state 60
    ret_stmt    go to state 61
    exp         go to state 62
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 113

   59 call: id LPAREN args RPAREN •

    $default  reduce using rule 59 (call)


State 114

   62 arg_list: arg_list COMMA • exp

    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49

    num         go to state 52
    id          go to state 53
    exp         go to state 118
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 115

   41 var: id LBRACE exp RBRACE •

    $default  reduce using rule 41 (var)


State 116

   33 selec_stmt: IF LPAREN exp RPAREN stmt • ELSE stmt
   34           | IF LPAREN exp RPAREN stmt •

    ELSE  shift, and go to state 119

    ELSE      [reduce using rule 34 (selec_stmt)]
    $default  reduce using rule 34 (selec_stmt)


State 117

   35 iter_stmt: WHILE LPAREN exp RPAREN stmt •

    $default  reduce using rule 35 (iter_stmt)


State 118

   62 arg_list: arg_list COMMA exp •

    $default  reduce using rule 62 (arg_list)


State 119

   33 selec_stmt: IF LPAREN exp RPAREN stmt ELSE • stmt

    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48
    ID      shift, and go to state 9
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 49
    LCURLY  shift, and go to state 39
    SEMI    shift, and go to state 50

    num         go to state 52
    id          go to state 53
    comp_stmt   go to state 55
    stmt        go to state 120
    exp_stmt    go to state 58
    selec_stmt  go to state 59
    iter_stmt   go to state 60
    ret_stmt    go to state 61
    exp         go to state 62
    var         go to state 63
    simple_exp  go to state 64
    add_exp     go to state 65
    term        go to state 66
    factor      go to state 67
    call        go to state 68


State 120

   33 selec_stmt: IF LPAREN exp RPAREN stmt ELSE stmt •

    $default  reduce using rule 33 (selec_stmt)
